Replace charset meta tag and added viewport meta tag.

--- a/CodeFest2013Presentation.html
+++ b/CodeFest2013Presentation.html
@@ -3,7 +3,8 @@
 <head>
 	<title>Responsive Web components — Web Experience Toolkit CodeFest 2013</title>
 
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
 	<script type="text/javascript" src="impress.js"></script>
 </head>
