--- a/CodeFest2013Presentation.html
+++ b/CodeFest2013Presentation.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 	<title>Responsive Web components — Web Experience Toolkit CodeFest 2013</title>
 
