--- a/CodeFest2013Presentation.html
+++ b/CodeFest2013Presentation.html
@@ -5,8 +5,6 @@
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	
-	<script type="text/javascript" src="impress.js"></script>
 </head>
 
 <body>
@@ -22,5 +20,10 @@
 			</section>
 		</div>
 	</div>
+
+	<script type="text/javascript" src="impress.js"></script>
+	<script type="text/javascript">
+		impress().init();
+	</script>
 </body>
 </html>
