Added missing 's' in 'impress' ID.

--- a/CodeFest2013Presentation.html
+++ b/CodeFest2013Presentation.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<div id="impres">
+	<div id="impress">
 		<div class="step">
 			<section>
 				<h1>Responsive Web components</h1>
