--- a/CodeFest2013Presentation.html
+++ b/CodeFest2013Presentation.html
@@ -15,7 +15,7 @@
 				<p>Taking responsive Web design to the next level</p>
 
 				<p>Responsive Web components are an evolution on the concept of responsive Web design. The idea is to make the components that make up a Web site themselves responsive instead of just the site as a whole.</p>
-				<p>You can think of responsive Web design as a top-down approach, and responsive Web components as a bottom-up approach, to solving the problem of making Web sites usable to a wide variety of devices.</p>
+				<p>You can think of responsive Web design as a top-down approach, and responsive Web components as a bottom-up approach, to solving the problem of making Web sites usable on a wide variety of devices.</p>
 				<p>Responsive Web components are built on capability-detection and container-level media queries. This makes them more re-usable and adaptable.</p>
 			</section>
 		</div>
