--- a/CodeFest2013Presentation.html
+++ b/CodeFest2013Presentation.html
@@ -5,14 +5,18 @@
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+	<link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
 	<div id="impress">
-		<div class="step">
+		<div class="step slide">
 			<section>
-				<h1>Responsive Web components</h1>
-				<p>Taking responsive Web design to the next level</p>
+				<div class="title-block">
+					<h1>Responsive Web components</h1>
+					<p class="subtitle">Taking responsive Web design to the next level</p>
+				</div>
 
 				<p>Responsive Web components are an evolution on the concept of responsive Web design. The idea is to make the components that make up a Web site themselves responsive instead of just the site as a whole.</p>
 				<p>You can think of responsive Web design as a top-down approach, and responsive Web components as a bottom-up approach, to solving the problem of making Web sites usable on a wide variety of devices.</p>
