--- a/CodeFest2013Presentation.html
+++ b/CodeFest2013Presentation.html
@@ -25,7 +25,7 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="impress.js"></script>
+	<script type="text/javascript" src="js/impress.js"></script>
 	<script type="text/javascript">
 		impress().init();
 	</script>
