Made some minor content changes and added new styles

--- a/CodeFest2013Presentation.html
+++ b/CodeFest2013Presentation.html
@@ -11,15 +11,20 @@
 
 <body>
 
-<section>
+<header class="centred">
 	<div class="title-block">
-		<h1>Responsive Web components</h1>
+		<h1 class="left-aligned">Responsive Web components</h1>
 		<p class="subtitle">Taking responsive Web design to the next level</p>
 	</div>
+</header>
 
-	<p>Responsive Web components are an evolution on the concept of responsive Web design. The idea is to make the components that make up a Web site themselves responsive instead of just the site as a whole.</p>
-	<p>You can think of responsive Web design as a top-down approach, and responsive Web components as a bottom-up approach, to solving the problem of making Web sites usable on a wide variety of devices.</p>
-	<p>Responsive Web components are built on capability-detection and container-level media queries. This makes them more re-usable and adaptable.</p>
+<section>
+	<h2>Responsive Web components are…</h2>
+	<ul>
+		<li>A new approach to responsive Web design. The idea is to make the components that make up a Web site themselves responsive instead of just the site as a whole.</li>
+		<li>A bottom-up approach intended to be combined with the traditional top-down approach to responsive Web design.</li>
+		<li>Built on capability-detection and container-level media queries. This makes them more re-usable and adaptable.</li>
+	</ul>
 </section>
 
 </body>
