Revised the content of the presentation.

--- a/CodeFest2013Presentation.html
+++ b/CodeFest2013Presentation.html
@@ -14,17 +14,19 @@
 <header class="centred">
 	<div class="title-block">
 		<h1 class="left-aligned">Responsive Web components</h1>
-		<p class="subtitle">Taking responsive Web design to the next level</p>
+		<p class="subtitle">A new approach to responsive Web design</p>
 	</div>
 </header>
 
 <section>
-	<h2>Responsive Web components are…</h2>
+	<p>The idea is to make the components that make up a Web site responsive instead of just the site as a whole.</p>
+	<p>It's a bottom-up approach to be combined with the traditional top-down approach to responsive Web design.</p>
+	<p>It depends on:</p>
 	<ul>
-		<li>A new approach to responsive Web design. The idea is to make the components that make up a Web site themselves responsive instead of just the site as a whole.</li>
-		<li>A bottom-up approach intended to be combined with the traditional top-down approach to responsive Web design.</li>
-		<li>Built on capability-detection and container-level media queries. This makes them more re-usable and adaptable.</li>
+		<li>feature-detection to identify the capabilities of the user agent, and</li>
+		<li>container-level media queries to identify the space available to render the component.</li>
 	</ul>
+	<p>Making the components themselves responsive makes them more re-usable and adaptable and makes the Web sites that use them more robust.</p>
 </section>
 
 </body>
