Updated the presentation's to reflect the change of title to responsive Web objects.

--- a/CodeFest2013PresentationTeaser.html
+++ b/CodeFest2013PresentationTeaser.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>Introduction to responsive Web components — Web Experience Toolkit CodeFest 2013</title>
+	<title>Introduction to responsive Web objects — Web Experience Toolkit CodeFest 2013</title>
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,7 +13,7 @@
 
 <header>
 	<div class="title-block">
-		<h1 class="left-aligned">Introduction to responsive Web components</h1>
+		<h1 class="left-aligned">Introduction to responsive Web objects</h1>
 	</div>
 </header>
 
