--- a/CodeFest2013Presentation.html
+++ b/CodeFest2013Presentation.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>Responsive Web components — Web Experience Toolkit CodeFest 2013</title>
+	<title>Responsive Web objects — Web Experience Toolkit CodeFest 2013</title>
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,7 +13,7 @@
 
 <header class="centred">
 	<div class="title-block">
-		<h1 class="left-aligned">Responsive Web components</h1>
+		<h1 class="left-aligned">Responsive Web objects</h1>
 		<p class="subtitle">A new approach to responsive Web design</p>
 	</div>
 </header>
