Updated the presentation teaser to reflect the inclusion of implementation to the session.

--- a/CodeFest2013PresentationTeaser.html
+++ b/CodeFest2013PresentationTeaser.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>Introduction to responsive Web objects — Web Experience Toolkit CodeFest 2013</title>
+	<title>Responsive Web objects — Web Experience Toolkit CodeFest 2013</title>
 
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,20 +11,22 @@
 
 <body>
 
-<header>
+<header class="centred">
 	<div class="title-block">
-		<h1 class="left-aligned">Introduction to responsive Web objects</h1>
+		<h1 class="left-aligned">Responsive Web objects</h1>
+		<p class="subtitle">A new approach to responsive Web design</p>
 	</div>
 </header>
 
 <section>
 	<h2>What this session is about</h2>
-	<p>This session will introduce a new approach to building responsive Web sites that focuses on making the components that make up a Web site independently responsive.</p>
+	<p>This session will explore a new approach to building responsive Web sites, which focuses on making the components that make up a Web site independently responsive, and how this approach can be implemented.</p>
 </section>
 
 <section>
 	<h2>Who should attend this session</h2>
 	<p>This session is intended for designers and developers at all levels of skill and experience.</p>
+	<p>The implementation portion of this session may involve actual coding, so you may want to bring a laptop with a Web browser and a text editor.</p>
 </section>
 
 <section>
