Begun adding information to introduce the idea of making Web objects responsive.

--- a/CodeFest2013Presentation.html
+++ b/CodeFest2013Presentation.html
@@ -19,6 +19,10 @@
 </header>
 
 <section>
+	<p>We build Web site by putting together various interface elements. HTML makes a number of basic such interface elements available to Web designers; things like links, buttons and form fields. Designers then combine these basic interface elements to create new, more complex interface elements such as date pickers, carousels and mega menus. This is just like in object-oriented programming where we have <em>primitives</em>, basic data types such as integers and strings, and <em>objects</em>, complex data types built from the combination of primitives and other objects.</p>
+	<p>In 2010, Ethan Marcotte introduced the concept of <a href="http://alistapart.com/article/responsive-web-design"><em>responsive Web design</em></a>. Responsive Web design is an approach to designing Web sites where we adapt the layout of the Web pages to the size of the screen on which they are being viewed. In doing so, we also tend to adapt the layout and presentation of the complex interface elements we created and used on the Web page. But these interface elements are still just considered part of the Web page layout, not as independent objects.</p>
+	<p>What if we treated them as independent objects?</p>
+	<p>If we treated the complex interface elements we create as independent objects, we could apply the idea of reponsive design to these objects themselves. In other words, we could make them our interface elements themselves responsive, instead of just the Web pages of which they are part of.</p>
 	<p>The idea is to make the components that make up a Web site responsive instead of just the site as a whole.</p>
 	<p>It's a bottom-up approach to be combined with the traditional top-down approach to responsive Web design.</p>
 	<p>It depends on:</p>
