Corrected the page language in the French pages.

--- a/JourneesDeCodage2013-AguicheBlocsSuperposes.html
+++ b/JourneesDeCodage2013-AguicheBlocsSuperposes.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
 	<title>Blocs superposés réactifs — Web Experience Toolkit CodeFest 2013</title>
 
