--- a/JourneesDeCodage2013-AguicheObjetsWebReactifs.html
+++ b/JourneesDeCodage2013-AguicheObjetsWebReactifs.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
 	<title>Les objets Web réactifs — Journées de codage de la Boîte à outils de l'expérience Web 2013</title>
 
