--- a/JourneesDeCodage2013-AguicheMenuDeNavigationReactif.html
+++ b/JourneesDeCodage2013-AguicheMenuDeNavigationReactif.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
 	<title>Menu de navigation réactif — Web Experience Toolkit CodeFest 2013</title>
 
