Added language headings and added missing lang='fr' to list of links in French.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </header>
 
 <section>
+	<h2>English</h2>
 	<ul>
 		<li><a href="CodeFest2013-ResponsiveWebObjectsTeaser.html">Responsive Web Objects</a></li>
 		<li><a href="CodeFest2013-ResponsiveOverlaysTeaser.html">Responsive overlays</a></li>
@@ -25,7 +26,8 @@
 	</ul>
 </section>
 
-<section>
+<section lang="fr">
+	<h2>Français</h2>
 	<ul>
 		<li><a href="JourneesDeCodage2013-AguicheObjetsWebReactifs.html">Objets Web réactifs</a></li>
 		<li><a href="JourneesDeCodage2013-AguicheBlocsSuperposesReactifs.html">Blocs superposés réactifs</a></li>
